// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ProgressBarGroup /> > should match the snapshot 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuh8 ProgressBarGroup_root__1e1wroi0"
    style="grid-template-columns: 1fr;"
  >
    <span
      align="right"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
    <div
      class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_gray100__onxwju4a ProgressBar_container__4k1c010"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_green500__onxwju4n ProgressBar_bar__4k1c011 ProgressBar_container__4k1c010"
        style="width: 16.666666666666664%;"
      />
    </div>
    <span
      align="left"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
    <span
      align="right"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
    <div
      class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_gray100__onxwju4a ProgressBar_container__4k1c010"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_green500__onxwju4n ProgressBar_bar__4k1c011 ProgressBar_container__4k1c010"
        style="width: 33.33333333333333%;"
      />
    </div>
    <span
      align="left"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
    <span
      align="right"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
    <div
      class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_gray100__onxwju4a ProgressBar_container__4k1c010"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_green500__onxwju4n ProgressBar_bar__4k1c011 ProgressBar_container__4k1c010"
        style="width: 50%;"
      />
    </div>
    <span
      align="left"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
  </div>
</div>
`;

exports[`<ProgressBarGroup /> > should should ignore extra labels 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuh8 ProgressBarGroup_root__1e1wroi0"
    style="grid-template-columns: auto 1fr;"
  >
    <span
      align="right"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    >
      a
    </span>
    <div
      class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_gray100__onxwju4a ProgressBar_container__4k1c010"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_green500__onxwju4n ProgressBar_bar__4k1c011 ProgressBar_container__4k1c010"
        style="width: 16.666666666666664%;"
      />
    </div>
    <span
      align="left"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
    <span
      align="right"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    >
      b
    </span>
    <div
      class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_gray100__onxwju4a ProgressBar_container__4k1c010"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_green500__onxwju4n ProgressBar_bar__4k1c011 ProgressBar_container__4k1c010"
        style="width: 33.33333333333333%;"
      />
    </div>
    <span
      align="left"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
    <span
      align="right"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    >
      c
    </span>
    <div
      class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_gray100__onxwju4a ProgressBar_container__4k1c010"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_green500__onxwju4n ProgressBar_bar__4k1c011 ProgressBar_container__4k1c010"
        style="width: 50%;"
      />
    </div>
    <span
      align="left"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
  </div>
</div>
`;

exports[`<ProgressBarGroup /> > should should ignore not break when not enough labels 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuh8 ProgressBarGroup_root__1e1wroi0"
    style="grid-template-columns: auto 1fr;"
  >
    <span
      align="right"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    >
      a
    </span>
    <div
      class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_gray100__onxwju4a ProgressBar_container__4k1c010"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_green500__onxwju4n ProgressBar_bar__4k1c011 ProgressBar_container__4k1c010"
        style="width: 16.666666666666664%;"
      />
    </div>
    <span
      align="left"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
    <span
      align="right"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
    <div
      class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_gray100__onxwju4a ProgressBar_container__4k1c010"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_green500__onxwju4n ProgressBar_bar__4k1c011 ProgressBar_container__4k1c010"
        style="width: 33.33333333333333%;"
      />
    </div>
    <span
      align="left"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
    <span
      align="right"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
    <div
      class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_gray100__onxwju4a ProgressBar_container__4k1c010"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_green500__onxwju4n ProgressBar_bar__4k1c011 ProgressBar_container__4k1c010"
        style="width: 50%;"
      />
    </div>
    <span
      align="left"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
  </div>
</div>
`;

exports[`<ProgressBarGroup /> > should should render a prefix for every value 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuh8 ProgressBarGroup_root__1e1wroi0"
    style="grid-template-columns: auto 1fr;"
  >
    <span
      align="right"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    >
      a
    </span>
    <div
      class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_gray100__onxwju4a ProgressBar_container__4k1c010"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_green500__onxwju4n ProgressBar_bar__4k1c011 ProgressBar_container__4k1c010"
        style="width: 16.666666666666664%;"
      />
    </div>
    <span
      align="left"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
    <span
      align="right"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    >
      b
    </span>
    <div
      class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_gray100__onxwju4a ProgressBar_container__4k1c010"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_green500__onxwju4n ProgressBar_bar__4k1c011 ProgressBar_container__4k1c010"
        style="width: 33.33333333333333%;"
      />
    </div>
    <span
      align="left"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
    <span
      align="right"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    >
      c
    </span>
    <div
      class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_gray100__onxwju4a ProgressBar_container__4k1c010"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_1__onxwju0 sprinkles_backgroundColor_green500__onxwju4n ProgressBar_bar__4k1c011 ProgressBar_container__4k1c010"
        style="width: 50%;"
      />
    </div>
    <span
      align="left"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_3__1xnpmd73"
    />
  </div>
</div>
`;
